--- a/templates/classic.html
+++ b/templates/classic.html
@@ -9,6 +9,7 @@
 				<div>{{ form.yearly_mean.label }}: {{ form.yearly_mean() }}</div>
 				<div>{{ form.installation_type.label }}: {{ form.installation_type() }}</div>
 				<div>{{ form.inverter.label }}: {{ form.inverter() }}</div>
+				<div>{{ form.panel.label }}: {{form.panel() }}</div>
 				<div>{{ form.optimisers.label }}: {{ form.optimisers() }}</div>
 				<div>{{ form.thermo.label }}: {{ form.thermo() }}</div>
 			</fieldset>
