--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   
     <link rel="stylesheet" type="text/css" href="static/main.css">
 
+	<link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
     {% if title %}
         <title>Solar Calculator - {{ title }}</title>
