Small title change

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
 	<link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
     {% if title %}
-        <title>Solar Calculator - {{ title }}</title>
+        <title>HSG Calculator - {{ title }}</title>
     {% else %}
-        <title>Solar Calculator</title>
+        <title>HSG Calculator</title>
     {% endif %}
 </head>
 <body>
