--- a/templates/classic.html
+++ b/templates/classic.html
@@ -6,6 +6,7 @@
 				<legend class="border-bottom mb-4">Wygeneruj ofertę Classic</legend>
 				<div>{{ form.owner.label }}: {{ form.owner() }}</div>
 				<div>{{ form.yearly_mean.label }}: {{ form.yearly_mean() }}</div>
+				<div>{{ form.power_price.label }}: {{ form.power_price() }}</div>
 				<div>{{ form.installation_type.label }}: {{ form.installation_type() }}</div>
 				<div>{{ form.inverter.label }}: {{ form.inverter() }}</div>
 				<div>{{ form.panel.label }}: {{form.panel() }}</div>
